# Aero-Design-Team-Gamma

./: README.md  aircraft_params.json  aircraft_stability_analysis.json  final_optimization_analysis.json  lateral.npy  pyproject.toml  static_stability_analysis.json
.github/workflows/: compile_report.yaml  weekly_setup.yaml
aircraft_design/analysis/: dynamic_stability.py  lateral.py  longitudinal.py  mass_analysis.py  stability_conversion.py  static_stability.py  takeoff_and_landing.py
aircraft_design/components/: fuselage.py
aircraft_design/core/: aircraft.py  base.py  plotting.py
aircraft_design/examples/: __init__.py  blended_wing.py  hydrogen_wing.ipynb  large_passenger_aircraft.py  lw-jp.ipynb  lw-jp.py  test.py
aircraft_design/final-design/: final_cabin.py  final_wing.py
aircraft_design/final_design/: final_cabin.py  final_construction.py  final_fuselage.py  final_landing_gear.py  final_stability_analysis.py  final_tails.py  final_wing.py
analysis/: Hydrogen_Boiloff_Investigation.ipynb  Performance_Optimization.ipynb  Wing.scad  Wing.stl  cacm.ipynb  cacm.py  complete_dict.py  define_vars.py  first_round.ipynb  fuel_tradeoff_calcs.ipynb  fuel_tradeoff_calcs.py  hydrogen_boiloff.py  performance_analysis.py  performance_calcs.ipynb  plotting_points.ipynb  static_stability.py
analysis/scratch_work/: pastebin.py
assets/: aircraft.json  aircraft_empty_fuel.json  tail_incidence_optimization.json
global_variables/: aero_vars.yaml  registry.py  schema.yaml  solver.py  variables.yaml
scratch_work/: cacm.py  hydrogen_boiloff.py
scripts/: Untitled.ipynb  aircraft_drawing_new.py  aircraft_drawing_old.py  md_to_latex.py
templates/: presentation_template.md  report_template.md  report_template.tex
(+62 files in other folders)
